--- a/frontend/styles/_ui.scss
+++ b/frontend/styles/_ui.scss
@@ -4,6 +4,9 @@
 .breadcrumb-item + .breadcrumb-item::before{
   content:"|";
 }
+.font-mono{
+  font-family: monospace;
+}
 article{
   img{
     max-width: 100%;
@@ -193,5 +196,19 @@ a.card-title{
         }
       }
     }
+  }
+}
+
+.screenshot{
+
+  img{
+    border-radius: 0.5em;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .page-detail &{
+    max-width: 600px;
+    clear:both;
   }
 }
