--- a/sitecomber/apps/shared/static/main.css
+++ b/sitecomber/apps/shared/static/main.css
@@ -7007,6 +7007,9 @@ body {
   .nav-masthead {
     float: right; } }
 
+.font-underline {
+  text-decoration: underline; }
+
 .breadcrumb {
   background: #212529; }
 
